<?xml version="1.0" ?>
<package format="2">
  <name>infuse_debug_tools</name>
  <version>3.5.0</version>
  <description>
  Lala
  </description>

  <maintainer email="emendes@laas.fr">Ellon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>infuse_msgs</depend>
  <depend>tf2</depend>
  <depend>rosbag_storage</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

